[gd_scene load_steps=5 format=2]

[ext_resource path="res://board/moving_parts/ball.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/tinypixel9px.tres" type="DynamicFont" id=6]

[sub_resource type="CircleShape2D" id=11]
radius = 6.0

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 2, 1 )

[node name="Ball" type="KinematicBody2D" groups=["Balls"]]
use_parent_material = true
collision_layer = 8
collision_mask = 23
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 11 )

[node name="BallCollision" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 15 )
collision_mask = 8

[node name="SwitchCollision" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwitchCollision"]
position = Vector2( 0, 6 )
shape = SubResource( 10 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1.5
margin_top = -5.0
margin_right = 5.5
margin_bottom = 7.0
custom_colors/font_color = Color( 1, 0.945098, 0.909804, 1 )
custom_fonts/font = ExtResource( 6 )
align = 1
valign = 1

[node name="LandAudio" type="AudioStreamPlayer" parent="."]

[connection signal="body_entered" from="SwitchCollision" to="." method="_on_SwitchCollision_body_entered"]
[connection signal="body_exited" from="SwitchCollision" to="." method="_on_SwitchCollision_body_exited"]
